--- a/style/style.css
+++ b/style/style.css
@@ -24,4 +24,7 @@ body {
     font-size: 12px;
     color: white;
   }
-  
+  .service{
+    border-bottom: solid 1px #060000;
+    padding: 20px;
+  }
