--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Voris Assignment</title>
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"> 
-  <link rel="stylesheet" href="../style/style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body ng-controller="formCtrl" >
 <div class="container">
@@ -17,40 +17,60 @@
 
         <div class="form-group" ng-class="{ 'has-error' : userForm.f_name.$invalid && !userForm.f_name.$pristine }">
             <label>First Name</label>
-            <input type="text" name="f_name" class="form-control" ng-model="f_name" required>
+            <input type="text" name="f_name" class="form-control" ng-model="formList.first_name" required>
             <p ng-show="userForm.f_name.$invalid && !userForm.f_name.$pristine" class="help-block">You first name is required.</p>
         </div>
         <div class="form-group" ng-class="{ 'has-error' : userForm.m_name.$invalid && !userForm.m_name.$pristine }">
             <label>Middle Name</label>
-            <input type="text" name="m_name" class="form-control" ng-model="m_name" required>
+            <input type="text" name="m_name" class="form-control" ng-model="formList.middle_name" required>
             <p ng-show="userForm.m_name.$invalid && !userForm.m_name.$pristine" class="help-block">You middle name is required.</p>
         </div>
         <div class="form-group" ng-class="{ 'has-error' : userForm.l_name.$invalid && !userForm.l_name.$pristine }">
             <label>Last Name</label>
-            <input type="text" name="l_name" class="form-control" ng-model="l_name" required>
+            <input type="text" name="l_name" class="form-control" ng-model="formList.last_name" required>
             <p ng-show="userForm.l_name.$invalid && !userForm.l_name.$pristine" class="help-block">You last name is required.</p>
         </div>
         <div class="form-group" ng-class="{ 'has-error' : userForm.comp_name.$invalid && !userForm.comp_name.$pristine }">
             <label>Company Name</label>
-            <input type="text" name="comp_name" class="form-control" ng-model="comp_name" ng-minlength="3" ng-maxlength="8" required>
+            <input type="text" name="comp_name" class="form-control" ng-model="formList.comp_name" ng-minlength="3" ng-maxlength="30" required>
             <p ng-show="userForm.comp_name.$invalid && !userForm.comp_name.$pristine" class="help-block">You company name is required.</p>
             <p ng-show="userForm.comp_name.$error.minlength" class="help-block">comp_name is too short.</p>
             <p ng-show="userForm.comp_name.$error.maxlength" class="help-block">comp_name is too long.</p>
         </div>
         <div class="form-group" ng-class="{ 'has-error' : userForm.email.$invalid && !userForm.email.$pristine }">
             <label>Email</label>
-            <input type="email" name="email" class="form-control" ng-model="email">
+            <input type="email" name="email" class="form-control" ng-model="formList.email">
             <p ng-show="userForm.email.$invalid && !userForm.email.$pristine" class="help-block">Enter a valid email.</p>
         </div>
 
         <!-- SUBMIT BUTTON -->
         <button type="submit" class="btn btn-primary" ng-disabled="userForm.$invalid">Submit</button>
+        <button type="submit" class="btn btn-primary" ng-click="reset()" >Cancel</button>
 
     </form>
+
+
+    <div ng-controller="listCtrl">
+            <h1>Form Data</h1>
+            <div ng-repeat="form in listData">
+            <div class="row service" >
+              <div class="col-md-12">
+                 <h5>{{++index}}</h5> 
+                <h5> {{ form.first_name}}</h5>
+                <h5> {{ form.middle_name}}</h5>
+                <h5 {{ form.last_name}}</h5>
+                <h5> {{ form.comp_name}}</h5>
+                <h5> {{ form.email}}</h5>
+                <button type="submit" class="btn btn-primary" ng-click="Delete()" >Delete</button>
+                
+              </div>
+            </div>
+            </div>
+    </div>
     <!-- SCRIPTS -->
-<script type="text/javascript" src="../node_modules/angular/angular.js" ></script>
-<script type="text/javascript" src="../node_modules/angular-route/angular-route.js"></script>
-<script type="text/javascript" src="../app/app.js"></script>
+<script type="text/javascript" src="/angular/angular.js" ></script>
+<script type="text/javascript" src="/angular-route/angular-route.js"></script>
+<script type="text/javascript" src="/app.js"></script>
 
 </body>
 </html>
